2022-06-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* kanji.[ch], upbibtex.ch:
	Support guessing input file encodings.
	https://github.com/texjporg/tex-jp-build/issues/142
	* tests/upbibtex.test, am/uptex.am:
	Add tests for guess encodings & upBibTeX.

2022-05-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* upbibtex.ch:
	Accept multibyte characters by int.to.chr$ and chr.to.int$, i.e.
	chr is corresponding to one single character multibyte string.

2022-05-07  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* upbibtex.ch:
	Support Latin-1, Latin Extended-A, Greek and Cyrillic on change.case$.
	Ignore add.period$ after Interrobang ‽.
	Make is.kanji.str$ false for Ideographic Description Characters.

2022-05-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* upbibtex.ch: Fix bug on kpse_set_progname.
	* upbibtex.test: Update a test.

2022-03-21  Karl Berry  <karl@tug.org>

	* TL'22 release.

2022-02-20  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* upbibtex.ch: Adapt to pbibtex.ch.
	  https://github.com/texjporg/tex-jp-build/issues/133

2022-02-15  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex-m.ch: Adapt to ptex-base.ch.
	  More info: https://github.com/texjporg/tex-jp-build/issues/87

2022-02-13  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* upbibtex.ch: Adapt to pbibtex.ch (version number).

2022-02-05  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* uptex.defines: Add isterminalUTF8.

2022-01-29  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* uptex-m.ch: Adapt to ptex-base.ch fixes.

2022-01-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uptex-m.ch, upbibtex.ch, updvitype.ch, uppltotf.ch, uptftopl.ch,
	uptex_version.h: upTeX version u1.28.
	* uptex-m.ch, upbibtex.ch, kanji.c:
	Update reference of Unicode blocks to
	"Blocks-14.0.0.txt Date: 2021-01-22, 23:29:00 GMT [KW]".
	* COPYRIGHT, COPYRIGHT.ja:
	Update copyright year.
	* upkcat.test, tests/kcat.tex, tests/upkcat.txt: Add a new test.
