@@ -9,7 +9,6 @@ A::15
 0x1E00::15
 ⺀::16
 ⼀::16
-⿰::16
 ㄅ::16
 ㆐::16
 ㆠ::16
@@ -24,6 +23,7 @@ A::15
 𬺰::16
 丽::16
 𰀀::16
+𱍐::16
 あ::17
 ア::17
 ㇰ::17
@@ -31,6 +31,18 @@ A::15
 𛀀::17
 𛄀::17
 𛅐::17
+※::18
+℃::18
+Ⅻ::18
+⇒::18
+∂::18
+①::18
+┟::18
+☃::18
+⿰::18
+〠::18
+㋐::18
+㍿::18
 ᄀ::19
 ㄱ::19
 ꥠ::19
